# projector

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Projector.cpp  Projector.hpp  README.md  config.hpp  config.hpp.in  main.cpp  projector.sln  util.cpp  util.hpp  vcpkg.json
lib/tiny_obj_loader/: tiny_obj_loader.h
shaders/: CMakeLists.txt  frag.glsl  frag.spv  vert.glsl
src/: CMakeLists.txt  CMakeLists.txt.bak  config.hpp  gpu.cpp  gpu.hpp  input.cpp  input.hpp  main.cpp  object.cpp  object.hpp  projector.cpp  projector.hpp  scene.cpp  scene.hpp  stats.cpp  stats.hpp  util.cpp  util.hpp
src/shaders/: CMakeLists.txt  frag.glsl  frag.spv  vert.glsl  vert.spv  warp_frag.glsl  warp_frag.spv  warp_vert.glsl  warp_vert.spv
